--- a/style.css
+++ b/style.css
@@ -20,10 +20,10 @@ body{
 
 .calculator{
     padding: 20px;
-    border: 2px solid rgba(255, 255, 255, 0.2);
+    border: 2px solid #000;
     border-radius: 20px;
-    box-shadow: 0px 3px 15px rgba(255, 255, 255, 0.1);
-    background: rgba(0, 0, 0, 0.7);
+    box-shadow: 0px 3px 15px rgba(0, 0, 0, 0.8);
+    background: rgba(0, 0, 0, 0.5);
     backdrop-filter: blur(10px);
 }
 
@@ -32,9 +32,9 @@ input{
     padding: 25px;
     margin: 10px;
     margin-bottom: 20px;
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(255, 255, 255, 0.3);
     box-shadow: inset 0px 0px 8px rgba(0, 0, 0, 0.4);
-    font-size: 40px;
+    font-size: 50px;
     text-align: right;
     color: #fff;
     border: solid 2px rgba(255, 255, 255, 0.1);
@@ -53,9 +53,9 @@ button{
     margin: 8px;
     color: #fff;
     background: rgba(0, 0, 0, 0.8);
-    font-size: 22px;
+    font-size: 24px;
     cursor: pointer;
-    border: solid 1px rgba(255, 255, 255, 0.1);
+    border: solid 1px rgba(255, 255, 255, 0.2);
     border-radius: 50%;
     text-shadow: 0px 1px 5px rgba(0, 0, 0, 0.2);
     box-shadow: -1px 2px 10px rgba(0, 0, 0, 0.5);
